# pm_research

./: .gitignore  HANDOFF_claude_apify_live_canary_input_schema_regression_patch.md  HANDOFF_orchestrator_apify_transport_isolation_implementation.md  HANDOFF_orchestrator_apify_transport_isolation_spec.md  README.md  SPEC_apify_live_price_source_canary.md  SPEC_apify_transport_isolation_canary.md  START_HERE.md  UPLOAD_MANIFEST.md  pyproject.toml
pm_research/: __init__.py  backtest.py  calibration.py  cli.py  config.py  consensus.py  features.py  latency.py  metrics.py  scoring.py  selection.py  splits.py  wallet_classifier.py
project_context/: ARTIFACT_INDEX.md  CHATGPT_CANONICAL_UPDATE_WORKFLOW.md  DECISION_LOG.md  HANDOFF_orchestrator_option_b_b0_IMPLEMENTATION.md  HANDOFF_orchestrator_option_b_b0_RESULT.md  HANDOFF_orchestrator_option_b_b0_corrected_diagnostic_RESULT.md  HANDOFF_orchestrator_option_b_b0_failure_diagnostic.md  HANDOFF_orchestrator_option_b_spec_s1_1_patch.md  HANDOFF_orchestrator_option_c_artifact_enrichment_SPEC.md  HANDOFF_orchestrator_option_c_c1a_RESULT.md  HANDOFF_orchestrator_option_c_c1a_canary_parser_fix.md  HANDOFF_orchestrator_option_c_c1a_f1_canary_PREP.md  HANDOFF_orchestrator_option_c_c1a_f1_canary_REVIEW.md  HANDOFF_orchestrator_option_c_c1a_f1_selector_IMPLEMENTATION.md  HANDOFF_orchestrator_option_c_c1a_f2_ARTIFACT_REVIEW.md  HANDOFF_orchestrator_option_c_c1a_f2_followup_SPEC.md  HANDOFF_orchestrator_option_c_c1a_followup_SPEC.md  HANDOFF_orchestrator_option_c_c1a_timestamp_fix.md  HANDOFF_orchestrator_option_c_c1r_design_addendum.md  (+22 more)
(+338 files in other folders)
